--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@slack/bolt": "^3.12.2",
+    "@slack/socket-mode": "^1.3.2",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "dotenv": "^16.0.3",
+    "express": "^4.17.1",
+    "handy-postgres": "^1.3.2"
   }
 }
