--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
-    "handy-postgres": "^1.3.2"
+    "handy-postgres": "^1.3.2",
+    "quickchart-js": "^3.1.2"
   }
 }
