--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production node server.js"
+    "start": "NODE_ENV=production node server.js",
+    "lt": "./node_modules/.bin/lt --port 3007 --subdomain one-battle-beyond"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "handy-postgres": "^1.3.2",
+    "localtunnel": "^2.0.2",
     "quickchart-js": "^3.1.2"
   }
 }
