--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=production node server.js",
-    "lt": "./node_modules/.bin/lt --port 3007 --subdomain one-battle-beyond"
+    "lt": "./node_modules/.bin/lt --port 3007 --subdomain one-battle-beyond",
+    "manifest": "./node_modules/.bin/make-manifest && cp manifest.json ./public/manifest.json"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "express": "^4.17.1",
     "handy-postgres": "^1.3.2",
     "localtunnel": "^2.0.2",
+    "make-manifest": "^2.0.2",
     "quickchart-js": "^3.1.2"
   }
 }
